Add Class     Dictionary     Lookup     Grouping     OrderedEnumerable
Add Method
    ToDictionary
    MemoizeAll
    Share
    Let

Add Overload
    Join (compareKey)
    GroupJoin (compareKey)
    GroupBy (compareKey)
    PartitionBy (compareKey)
    ToLookup (compareKey)

Breaking Change
    return type of ToLookup -> from Array to Lookup
    Enumerate type of GroupBy,PartitionBy -> from KeyValuePair to Grouping

Change
    implimentation of OrderBy/ThenBy changed CLR compatible (maybe...)

Bug Fix
    GroupBy Key auto converts to string
    All set methods do not distinction between boolean and string and number
    Scan and All Paging Methods do not work if sequence contains undefined

--HG--
extra : convert_revision : svn%3A35bd361d-6aed-6a41-ac8b-b845e7a9a194/trunk%4037

--- a/test/test.htm
+++ b/test/test.htm
@@ -21,6 +21,8 @@
             newsuite.addTestPage("../test/testConvert.htm");
             newsuite.addTestPage("../test/testAction.htm");
             newsuite.addTestPage("../test/testErrorHandling.htm");
+            newsuite.addTestPage("../test/testFunctional.htm");
+            newsuite.addTestPage("../test/testDictionary.htm");
             return newsuite;
         }
     </script>
