--- a/sample/tutorial.htm
+++ b/sample/tutorial.htm
@@ -73,6 +73,35 @@
     });
     </pre>
     <h2>
+        Grouping and ref/value compare</h2>
+    <pre>
+    // ref compare
+    document.write((new Date(2000, 1, 1) == new Date(2000, 1, 1)) + "&lt;br />"); // false
+    document.write(({ a: 0} == { a: 0 }) + "&lt;br />"); // false
+    
+    document.write("------" + "&lt;br />");
+    var objects = [
+        { Date: new Date(2000, 1, 1), Id: 1 },
+        { Date: new Date(2010, 5, 5), Id: 2 },
+        { Date: new Date(2000, 1, 1), Id: 3 }
+    ]
+
+    // ref compare, can not grouping
+    Enumerable.From(objects)
+        .GroupBy("$.Date", "$.Id",
+            function (key, group) { return { date: key, ids: group.ToString(',')} })
+        .WriteLine("$.date + ':' + $.ids");
+
+    document.write("------" + "&lt;br />");
+
+    // use fourth argument(compareSelector)
+    Enumerable.From(objects)
+        .GroupBy("$.Date", "$.Id",
+            function (key, group) { return { date: key, ids: group.ToString(',')} },
+            function (key) { return key.toString() })
+        .WriteLine("$.date + ':' + $.ids");
+        </pre>
+    <h2>
         Regular Expression Matches</h2>
     <pre>
     // Enumerable.Matches return Enumerable&lt;MatchObject>
@@ -94,6 +123,34 @@
     // first radius of circle's area over 10000
     var result = Enumerable.ToInfinity(1).Where("r=>r*r*Math.PI>10000").First();
     document.write(result);
+    </pre>
+    <h2>
+        Dictionary</h2>
+    <pre>
+    // sample class
+    var cls = function (a, b)
+    {
+        this.a = a;
+        this.b = b;
+    }
+    var instanceA = new cls("a", 100);
+    var instanceB = new cls("b", 2000);
+
+    // create blank dictionary
+    var dict = Enumerable.Empty().ToDictionary();
+    // create blank dictionary(use compareSelector)
+    var dict = Enumerable.Empty().ToDictionary("","",function (x) { return x.a + x.b });
+
+    dict.Add(instanceA, "zzz");
+    dict.Add(instanceB, "huga");
+    document.write(dict.Get(instanceA) + "&lt;br />"); // zzz
+    document.write(dict.Get(instanceB) + "&lt;br />"); // huga
+
+    // enumerable (to KeyValuePair)
+    dict.ToEnumerable().ForEach(function (kvp)
+    {
+        document.write(kvp.Key.a + ":" + kvp.Value + "&lt;br />");
+    });
     </pre>
     <h2>
         sample - Nondeterministic Programs</h2>
