--- a/test/testGrouping.htm
+++ b/test/testGrouping.htm
@@ -44,6 +44,22 @@
             assertArrayEquals(correct, result);
         }
 
+        function testGroupBy4()
+        {
+            var objects = [
+                { Date: new Date(2000, 1, 1), Id: 1 },
+                { Date: new Date(2010, 5, 5), Id: 2 },
+                { Date: new Date(2000, 1, 1), Id: 3 }
+            ]
+            var result = Enumerable.From(objects)
+                .GroupBy("$.Date", "$.Id",
+                    function (key, group) { return key.getFullYear() + "-" + group.ToString(',') },
+                    function (key) { return key.toString() })
+                .ToArray();
+            correct = ["2000-1,3", "2010-2"]
+            assertArrayEquals(correct, result);
+        }
+
         function testPartitionBy()
         {
             result = E.From(fileList).PartitionBy("file=>file.match(/\\.(.+$)/)[1]").ToArray();
@@ -83,6 +99,26 @@
                       ];
             assertArrayEquals(correct, result);
         }
+
+        function testPartitionBy4()
+        {
+            var objects = [
+                { Date: new Date(2000, 1, 1), Id: 1 },
+                { Date: new Date(2000, 1, 1), Id: 2 },
+                { Date: new Date(2010, 5, 5), Id: 3 },
+                { Date: new Date(2000, 1, 1), Id: 4 },
+                { Date: new Date(2010, 5, 5), Id: 5 },
+                { Date: new Date(2010, 5, 5), Id: 6 }
+            ]
+            var result = Enumerable.From(objects)
+                .PartitionBy("$.Date", "$.Id",
+                    function (key, group) { return key.getFullYear() + "-" + group.ToString(',') },
+                    function (key) { return key.toString() })
+                .ToArray();
+            correct = ["2000-1,2", "2010-3", "2000-4", "2010-5,6"]
+            assertArrayEquals(correct, result);
+        }
+
 
         function testBufferWithCount()
         {
