--- a/test/testrunner.jquery.min.htm
+++ b/test/testrunner.jquery.min.htm
@@ -7,7 +7,7 @@
     <script type="text/javascript">
         var expected, actual;
     </script>
-    <script src="../internal/lib/jquery-1.4.1.js" type="text/javascript"></script>
+    <script src="jquery-1.4.1.min.js" type="text/javascript"></script>
     <script src="../jquery.linq.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         Enumerable = $.Enumerable;
