--- a/reference.htm
+++ b/reference.htm
@@ -130,7 +130,7 @@
         <tbody>
             <tr>
                 <td>
-                    Choice
+                    choice
                 </td>
                 <td>
                     Enumerable
@@ -139,13 +139,13 @@
                     params T obj
                 </td>
                 <td>
-                    <pre>Enumerable.Choice("a","b","c","d").Take(10)</pre>
-                    <pre>Enumerable.Choice(["a","b","c","d"]).Take(10)</pre>
+                    <pre>Enumerable.choice("a","b","c","d").Take(10)</pre>
+                    <pre>Enumerable.choice(["a","b","c","d"]).Take(10)</pre>
                 </td>
             </tr>
             <tr>
                 <td>
-                    Cycle
+                    cycle
                 </td>
                 <td>
                     Enumerable
@@ -154,8 +154,8 @@
                     params T obj
                 </td>
                 <td>
-                    <pre>Enumerable.Cycle(1,"foo",true).Take(10)</pre>
-                    <pre>Enumerable.Cycle([1,"foo",true]).Take(10)</pre>
+                    <pre>Enumerable.cycle(1,"foo",true).Take(10)</pre>
+                    <pre>Enumerable.cycle([1,"foo",true]).Take(10)</pre>
                 </td>
             </tr>
             <tr>
