--- a/internal/sandbox.htm
+++ b/internal/sandbox.htm
@@ -11,7 +11,7 @@
     <script type="text/javascript">
 
 
-        $.Enumerable.Range(1, 1000).ToObservable().Subscribe(function (x) { document.writeln(x) });
+        $.Enumerable.range(1, 1000).ToObservable().Subscribe(function (x) { document.writeln(x) });
     </script>
 
 
