working v3:method name change, lowerCamel,extendTo, whereselect optimization
--HG--
branch : v3

--- a/test/testrunner.htm
+++ b/test/testrunner.htm
@@ -4,17 +4,11 @@
     <title>linq.js test</title>
     <link href="qunit.css" rel="stylesheet" type="text/css" />
     <script src="qunit.js" type="text/javascript"></script>
+    <script src="../linq.js" type="text/javascript"></script>
+    <script type="text/javascript" src="../bindings/linq.qunit.js"></script>
     <script type="text/javascript">
         var expected, actual;
     </script>
-    <script src="../linq.js" type="text/javascript"></script>
-    <!--
-        <script src="../jquery-1.4.1.js" type="text/javascript"></script>
-        <script src="../jquery.linq.js" type="text/javascript"></script>
-        <script type="text/javascript">
-            Enumerable = $.Enumerable;
-        </script>
-    -->
     <!-- Test Suite -->
     <script src="enumerable.js" type="text/javascript"></script>
     <script src="projection.js" type="text/javascript"></script>
@@ -30,6 +24,7 @@
     <script src="functional.js" type="text/javascript"></script>
     <script src="dictionary.js" type="text/javascript"></script>
     <script src="arrayEnumerable.js" type="text/javascript"></script>
+    <script src="whereSelectEnumerable.js" type="text/javascript"></script>
 </head>
 <body>
     <h1 id="qunit-header">linq.js test</h1>
