--- a/sample/tutorial.htm
+++ b/sample/tutorial.htm
@@ -16,7 +16,7 @@
         window.onload = function ()
         {
             Enumerable.from(document.getElementsByTagName("pre"))
-                .ForEach(function (ele)
+                .forEach(function (ele)
                 {
                     eval(ele.innerText || ele.textContent);
                     var p = document.createElement("p");
@@ -32,40 +32,40 @@
         First step of Lambda Expression</h2>
     <pre>
     // Anonymous function
-    Enumerable.range(1, 3).Select(function(value, index) { return index + ':' + value }).WriteLine();
+    Enumerable.range(1, 3).select(function(value, index) { return index + ':' + value }).writeLine();
     // String like Lambda Expression (arguments => expression)
-    Enumerable.range(1, 3).Select("value,index=>index+':'+value").WriteLine();
+    Enumerable.range(1, 3).select("value,index=>index+':'+value").writeLine();
     
     // If the number of arguments is one , can use default iterator variable '$'
-    Enumerable.range(1, 3).Select("i=>i*2").WriteLine();
-    Enumerable.range(1, 3).Select("$*2").WriteLine(); // same
+    Enumerable.range(1, 3).select("i=>i*2").writeLine();
+    Enumerable.range(1, 3).select("$*2").writeLine(); // same
     
     // "" is shortcut of "x => x" (identity function)
-    Enumerable.range(4, 7).Join(Enumerable.range(8, 5), "", "", "outer,inner=>outer*inner").WriteLine();
+    Enumerable.range(4, 7).join(Enumerable.range(8, 5), "", "", "outer,inner=>outer*inner").writeLine();
     </pre>
     <h2>
         Scope of lambda expression</h2>
     <pre>
     var number = 3;
     // Can't Find number | lambda expression can use only global variable
-    // Enumerable.range(1,10).Where("$ == number").WriteLine();
+    // Enumerable.range(1,10).where("$ == number").writeLine();
 
     // use anonymous founction, can capture variable
-    Enumerable.range(1,10).Where(function(i){return i == number}).WriteLine();
+    Enumerable.range(1,10).where(function(i){return i == number}).writeLine();
     </pre>
     <h2>
         from(Object) -> convert to KeyValuePair</h2>
     <pre>
     var object = {foo:"a", "bar":100, "foobar":true};
-    Enumerable.from(object).ForEach(function(obj)
+    Enumerable.from(object).forEach(function(obj)
     {
-        document.write(obj.Key + ":" + obj.Value + "&lt;br />");
+        document.write(obj.key + ":" + obj.value + "&lt;br />");
     })
     </pre>
     <h2>
-        ForEach (continue and break)</h2>
+        forEach (continue and break)</h2>
     <pre>
-    Enumerable.repeat("foo", 10).ForEach(function(value, index)
+    Enumerable.repeat("foo", 10).forEach(function(value, index)
     {
         if (index % 2 == 0) return; // continue
         if (index > 6) return false; // break
@@ -88,18 +88,18 @@
 
     // ref compare, can not grouping
     Enumerable.from(objects)
-        .GroupBy("$.Date", "$.Id",
-            function (key, group) { return { date: key, ids: group.ToString(',')} })
-        .WriteLine("$.date + ':' + $.ids");
+        .groupBy("$.Date", "$.Id",
+            function (key, group) { return { date: key, ids: group.toJoinedString(',')} })
+        .writeLine("$.date + ':' + $.ids");
 
     document.write("------" + "&lt;br />");
 
     // use fourth argument(compareSelector)
     Enumerable.from(objects)
-        .GroupBy("$.Date", "$.Id",
-            function (key, group) { return { date: key, ids: group.ToString(',')} },
+        .groupBy("$.Date", "$.Id",
+            function (key, group) { return { date: key, ids: group.toJoinedString(',')} },
             function (key) { return key.toString() })
-        .WriteLine("$.date + ':' + $.ids");
+        .writeLine("$.date + ':' + $.ids");
         </pre>
     <h2>
         Regular Expression Matches</h2>
@@ -107,7 +107,7 @@
     // Enumerable.matches return Enumerable&lt;MatchObject>
 
     var input = "abcdefgABzDefabgdg";
-    Enumerable.matches(input, "ab(.)d", "i").ForEach(function(match)
+    Enumerable.matches(input, "ab(.)d", "i").forEach(function(match)
     {
         for (var prop in match)
         {
@@ -121,7 +121,7 @@
         LazyEvaluation and InfinityList</h2>
     <pre>
     // first radius of circle's area over 10000
-    var result = Enumerable.ToInfinity(1).Where("r=>r*r*Math.PI>10000").First();
+    var result = Enumerable.toInfinity(1).where("r=>r*r*Math.PI>10000").first();
     document.write(result);
     </pre>
     <h2>
@@ -137,19 +137,19 @@
     var instanceB = new cls("b", 2000);
 
     // create blank dictionary
-    var dict = Enumerable.empty().ToDictionary();
+    var dict = Enumerable.empty().toDictionary();
     // create blank dictionary(use compareSelector)
-    var dict = Enumerable.empty().ToDictionary("","",function (x) { return x.a + x.b });
+    var dict = Enumerable.empty().toDictionary("","",function (x) { return x.a + x.b });
 
-    dict.Add(instanceA, "zzz");
-    dict.Add(instanceB, "huga");
-    document.write(dict.Get(instanceA) + "&lt;br />"); // zzz
-    document.write(dict.Get(instanceB) + "&lt;br />"); // huga
+    dict.add(instanceA, "zzz");
+    dict.add(instanceB, "huga");
+    document.write(dict.get(instanceA) + "&lt;br />"); // zzz
+    document.write(dict.get(instanceB) + "&lt;br />"); // huga
 
     // enumerable (to KeyValuePair)
-    dict.ToEnumerable().ForEach(function (kvp)
+    dict.toEnumerable().forEach(function (kvp)
     {
-        document.write(kvp.Key.a + ":" + kvp.Value + "&lt;br />");
+        document.write(kvp.key.a + ":" + kvp.value + "&lt;br />");
     });
     </pre>
     <h2>
@@ -158,21 +158,21 @@
     <pre>
     var apart = Enumerable.range(1, 5);
     var answers = apart
-        .SelectMany(function(baker){ return apart
-        .SelectMany(function(cooper){ return apart
-        .SelectMany(function(fletcher){ return apart
-        .SelectMany(function(miller){ return apart
-        .Select(function(smith){ return {
+        .selectMany(function(baker){ return apart
+        .selectMany(function(cooper){ return apart
+        .selectMany(function(fletcher){ return apart
+        .selectMany(function(miller){ return apart
+        .select(function(smith){ return {
             baker: baker, cooper: cooper, fletcher: fletcher, miller: miller, smith: smith}})})})})})
-        .Where("Enumerable.from($).Distinct('$.Value').Count() == 5")
-        .Where("$.baker != 5")
-        .Where("$.cooper != 1")
-        .Where("$.fletcher != 1 && $.fletcher != 5")
-        .Where("$.miller > $.cooper")
-        .Where("Math.abs($.smith - $.fletcher) != 1")
-        .Where("Math.abs($.fletcher - $.cooper) != 1");
+        .where("Enumerable.from($).distinct('$.value').count() == 5")
+        .where("$.baker != 5")
+        .where("$.cooper != 1")
+        .where("$.fletcher != 1 && $.fletcher != 5")
+        .where("$.miller > $.cooper")
+        .where("Math.abs($.smith - $.fletcher) != 1")
+        .where("Math.abs($.fletcher - $.cooper) != 1");
 
-    answers.SelectMany("").WriteLine("$.Key + ':' + $.Value");
+    answers.selectMany("").writeLine("$.key + ':' + $.value");
     </pre>
 </body>
 </html>
