--- a/reference.htm
+++ b/reference.htm
@@ -2259,7 +2259,7 @@ Enumerable.from([{Foo:1, Bar:'z'},{Foo:5, Bar:null}]).toJSONString()</pre>
         <tbody>
             <tr>
                 <td>
-                    exchange
+                    letBind
                 </td>
                 <td>
                     Enumerable
@@ -2268,7 +2268,7 @@ Enumerable.from([{Foo:1, Bar:'z'},{Foo:5, Bar:null}]).toJSONString()</pre>
                     Enumerable&lt;TR> func(Enumerable&lt;T>)
                 </td>
                 <td>
-                    <pre>Enumerable.range(1,10).exchange(function(x){return x.zip(x.skip(1),"x,y=>x + ':' + y")})</pre>
+                    <pre>Enumerable.range(1,10).letBind(function(x){return x.zip(x.skip(1),"x,y=>x + ':' + y")})</pre>
                 </td>
             </tr>
             <tr>
@@ -2330,7 +2330,7 @@ mem.where("$%2==0")</pre>
         <tbody>
             <tr>
                 <td>
-                    tryCatch
+                    catchError
                 </td>
                 <td>
                     Enumerable
@@ -2341,12 +2341,12 @@ mem.where("$%2==0")</pre>
                 <td>
                     <pre>Enumerable.range(1,10).select(function(i){
     if(i == 5) throw new Error("enumerable_error"); else return i;})
-.tryCatch("document.write($.message)")</pre>
+.catchError("document.write($.message)")</pre>
                 </td>
             </tr>
             <tr>
                 <td>
-                    tryFinally
+                    finallyAction
                 </td>
                 <td>
                     Enumerable
@@ -2355,7 +2355,7 @@ mem.where("$%2==0")</pre>
                     void finallyAction()
                 </td>
                 <td>
-                    <pre>Enumerable.range(1,5).tryFinally(function(){document.write("finally")})</pre>
+                    <pre>Enumerable.range(1,5).finallyAction(function(){document.write("finally")})</pre>
                 </td>
             </tr>
         </tbody>
