--- a/test/testrunner.htm
+++ b/test/testrunner.htm
@@ -5,7 +5,7 @@
     <link href="qunit.css" rel="stylesheet" type="text/css" />
     <script src="qunit.js" type="text/javascript"></script>
     <script src="../linq.js" type="text/javascript"></script>
-    <script type="text/javascript" src="../bindings/linq.qunit.js"></script>
+    <script type="text/javascript" src="../extensions/linq.qunit.js"></script>
     <script type="text/javascript">
         var expected, actual;
     </script>
