linq.qunit.js - add test and fix
--HG--
branch : v3

--- a/test/testrunner.htm
+++ b/test/testrunner.htm
@@ -25,6 +25,7 @@
     <script src="dictionary.js" type="text/javascript"></script>
     <script src="arrayEnumerable.js" type="text/javascript"></script>
     <script src="whereSelectEnumerable.js" type="text/javascript"></script>
+    <script type="text/javascript" src="linq.qunit-test.js"></script>
 </head>
 <body>
     <h1 id="qunit-header">linq.js test</h1>
