fix bugs, indexOf
--HG--
branch : v3

--- a/internal/sandbox.htm
+++ b/internal/sandbox.htm
@@ -11,12 +11,33 @@
 
         Enumerable.Utils.extendTo(Array);
 
-        
-        
+
+        var a = [1, 10, 100, 1000, 100, 100];
+
+
+        var a = a.indexOfByLinq(100);
+
+
+        alert(a);
 
 
 
-        var _ = x;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     </script>
 </head>
 <body>
